--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,27 @@
 {
-  "name": "FTL x86_64 Build Env",  
-  "image": "ghcr.io/pi-hole/ftl-build:x86_64", 
+  "name": "FTL x86_64 Build Env",
+  "context": . ,  
+  "dockerfile": Dockerfile, 
   "extensions": [
-    "jetmartin.bats",
-    "ms-vscode.cpptools",
-    "ms-vscode.cmake-tools",
-    "eamodio.gitlens"
-  ]  
+	"jetmartin.bats",
+	"ms-vscode.cpptools",
+	"ms-vscode.cmake-tools",
+	"ms-vscode.cpptools-extension-packz",
+	"eamodio.gitlens"
+],
+"build": {
+	"dockerfile": "Dockerfile",
+	"args": {
+		"VARIANT": "ubuntu-22.04"
+	}
+},
+"customizations": {
+	"vscode": {}
+},
+"runArgs": [
+	"--cap-add=SYS_PTRACE",
+	"--security-opt",
+	"seccomp=unconfined"
+],
+"remoteUser": "vscode"
 }
